src/test/ui/const-generics/issues/issue-74950.min.stderr
error: using `Inner` as const generic parameters is forbidden
  --> $DIR/issue-74950.rs:18:23
   |
LL | struct Outer<const I: Inner>;
   |                       ^^^^^
   |
   = note: the only supported types are integers, `bool` and `char`
   = note: more complex types are supported with `#[feature(const_generics)]`

error: using `Inner` as const generic parameters is forbidden
  --> $DIR/issue-74950.rs:18:23
   |
LL | struct Outer<const I: Inner>;
   |                       ^^^^^
   |
   = note: the only supported types are integers, `bool` and `char`
   = note: more complex types are supported with `#[feature(const_generics)]`

error: using `Inner` as const generic parameters is forbidden
  --> $DIR/issue-74950.rs:18:23
   |
LL | struct Outer<const I: Inner>;
   |                       ^^^^^
   |
   = note: the only supported types are integers, `bool` and `char`
   = note: more complex types are supported with `#[feature(const_generics)]`

error: using `Inner` as const generic parameters is forbidden
  --> $DIR/issue-74950.rs:18:23
   |
LL | struct Outer<const I: Inner>;
   |                       ^^^^^
   |
   = note: the only supported types are integers, `bool` and `char`
   = note: more complex types are supported with `#[feature(const_generics)]`

error: using `Inner` as const generic parameters is forbidden
  --> $DIR/issue-74950.rs:18:23
   |
LL | struct Outer<const I: Inner>;
   |                       ^^^^^
   |
   = note: the only supported types are integers, `bool` and `char`
   = note: more complex types are supported with `#[feature(const_generics)]`

error: aborting due to 5 previous errors

